<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.qkt.twiliodemo.activity.roomList.RoomListActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_select_user"
        android:textAlignment="center" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_user1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <RadioButton
            android:id="@+id/rb_user2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <RadioButton
            android:id="@+id/rb_user3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <RadioButton
            android:id="@+id/rb_user4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <EditText
        android:id="@+id/et_room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_enter_room_name" />

    <Button
        android:id="@+id/btn_connect_to_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_connect_to_room" />
</LinearLayout>
