<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qkt.twiliodemo.activity.learningRoom.LearningRoomActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <com.twilio.video.VideoView
                android:id="@+id/vv_teacher"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.twilio.video.VideoView
                android:id="@+id/vv_my_self"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/tv_video_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/label_connecting" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/view_chat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_chat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/label_chat"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />
            </LinearLayout>

            <!--Separator-->
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"/>

            <LinearLayout
                android:id="@+id/view_doc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_docs" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_docs"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_docs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>
